components/minio/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
  annotations:
    argocd.argoproj.io/sync-wave: "0"
