components/minio/base/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app.kubernetes.io/name: minio
  ports:
  - name: api
    port: 9000
    targetPort: api
  - name: console
    port: 9001
    targetPort: console
